# zoo_project

./: LICENSE  readme.md
backend/zoo_project/: .env_example  .gitignore  pyproject.toml
backend/zoo_project/config/: asgi.py  urls.py  wsgi.py
backend/zoo_project/config/settings/: base.py
backend/zoo_project/observations/: enums.py  models.py  serializers.py  urls.py  views.py
backend/zoo_project/observations/migrations/: 0001_initial.py
frontend/zoo-project/: README.md  package-lock.json  package.json  vueform.config.js
frontend/zoo-project/src/components/: Observation.vue
frontend/zoo-project/src/helpers/: backend.js  utils.js
frontend/zoo-project/src/views/: HomeView.vue
